@@ -395,6 +395,20 @@ class SysModuleTest(unittest.TestCase):
         self.assertEqual(sys.call_tracing(str, (2,)), "2")
         self.assertRaises(TypeError, sys.call_tracing, str, 2)
 
+    def test_executable(self):
+        # Issue #7774: Ensure that sys.executable is an empty string if argv[0]
+        # has been set to an non existent program name and Python is unable to
+        # retrieve the real program name
+        import subprocess
+        # For a normal installation, it should work without 'cwd'
+        # argument. For test runs in the build directory, see #7774.
+        python_dir = os.path.dirname(os.path.realpath(sys.executable))
+        p = subprocess.Popen(
+            ["nonexistent", "-c", 'import sys; print repr(sys.executable)'],
+            executable=sys.executable, stdout=subprocess.PIPE, cwd=python_dir)
+        executable = p.communicate()[0].strip()
+        p.wait()
+        self.assert_(executable in ["''", repr(sys.executable)], executable)
 
 class SizeofTest(unittest.TestCase):
 
